Commenting out the creation of the separate country files.

--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,48 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] File data 2.csv does not exist: 'data 2.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-156-f6800bff2b45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mallspotifydata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data 2.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcountries\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mallspotifydata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Region'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mallcountries\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcountry\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcountries\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[1;32m    674\u001b[0m         )\n\u001b[1;32m    675\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 676\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    678\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    446\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    447\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 448\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp_or_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    449\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    450\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    878\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"has_index_names\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    879\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 880\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    881\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    882\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, engine)\u001b[0m\n\u001b[1;32m   1112\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"c\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1113\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"c\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1114\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1115\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1116\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"python\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/io/parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, src, **kwds)\u001b[0m\n\u001b[1;32m   1889\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"usecols\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1890\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1891\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1892\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munnamed_cols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munnamed_cols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1893\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] File data 2.csv does not exist: 'data 2.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "allspotifydata=pd.read_csv(\"data 2.csv\")\n",
-    "countries=pd.unique(allspotifydata['Region'])\n",
+    "#allspotifydata=pd.read_csv(\"data 2.csv\")\n",
+    "#countries=pd.unique(allspotifydata['Region'])\n",
     "\n",
-    "allcountries=[]\n",
-    "for country in countries:\n",
-    "    allcountries.append(allspotifydata[allspotifydata['Region']==country])\n",
+    "#allcountries=[]\n",
+    "#for country in countries:\n",
+    "    #allcountries.append(allspotifydata[allspotifydata['Region']==country])\n",
     "\n",
-    "count=1\n",
-    "for df in allcountries:\n",
-    "    name='country'+str(count)+'.csv'\n",
-    "    df.to_csv(r'C:\\Users\\Eva\\Downloads\\country'+str(count)+'.csv')\n",
-    "    count=count+1"
+    "#count=1\n",
+    "#for df in allcountries:\n",
+    "    #name='country'+str(count)+'.csv'\n",
+    "    #df.to_csv(r'C:\\Users\\Eva\\Downloads\\country'+str(count)+'.csv')\n",
+    "    #count=count+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +130,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These are the spotify datsets we should use: ['norway', 'denmark', 'iceland', 'switzerland', 'finland', 'netherlands', 'canada', 'newzealand', 'sweden', 'australia', 'costarica', 'austria', 'unitedstates', 'ireland', 'germany', 'belgium', 'luxembourg', 'unitedkingdom', 'chile', 'brazil', 'czechrepublic', 'argentina', 'mexico', 'singapore', 'uruguay', 'guatemala', 'panama', 'france', 'spain', 'colombia', 'slovakia', 'malaysia', 'ecuador', 'elsalvador', 'poland', 'italy', 'japan', 'lithuania', 'latvia', 'bolivia', 'peru', 'estonia', 'turkey', 'paraguay', 'philippines', 'hungary', 'indonesia', 'dominicanrepublic', 'greece', 'portugal', 'honduras', 'Taiwan']\n",
+      "                     Country  Happiness.Rank  Happiness.Score\n",
+      "0                     Norway             1.0            7.537\n",
+      "1                    Denmark             2.0            7.522\n",
+      "2                    Iceland             3.0            7.504\n",
+      "3                Switzerland             4.0            7.494\n",
+      "4                    Finland             5.0            7.469\n",
+      "5                Netherlands             6.0            7.377\n",
+      "6                     Canada             7.0            7.316\n",
+      "7                New Zealand             8.0            7.314\n",
+      "8                     Sweden             9.0            7.284\n",
+      "9                  Australia            10.0            7.284\n",
+      "10                Costa Rica            12.0            7.079\n",
+      "11                   Austria            13.0            7.006\n",
+      "12             United States            14.0            6.993\n",
+      "13                   Ireland            15.0            6.977\n",
+      "14                   Germany            16.0            6.951\n",
+      "15                   Belgium            17.0            6.891\n",
+      "16                Luxembourg            18.0            6.863\n",
+      "17            United Kingdom            19.0            6.714\n",
+      "18                     Chile            20.0            6.652\n",
+      "19                    Brazil            22.0            6.635\n",
+      "20            Czech Republic            23.0            6.609\n",
+      "21                 Argentina            24.0            6.599\n",
+      "22                    Mexico            25.0            6.578\n",
+      "23                 Singapore            26.0            6.572\n",
+      "24                   Uruguay            28.0            6.454\n",
+      "25                 Guatemala            29.0            6.454\n",
+      "26                    Panama            30.0            6.452\n",
+      "27                    France            31.0            6.442\n",
+      "28                     Spain            34.0            6.403\n",
+      "29                  Colombia            36.0            6.357\n",
+      "30                  Slovakia            40.0            6.098\n",
+      "31                  Malaysia            42.0            6.084\n",
+      "32                   Ecuador            44.0            6.008\n",
+      "33               El Salvador            45.0            6.003\n",
+      "34                    Poland            46.0            5.973\n",
+      "35                     Italy            48.0            5.964\n",
+      "36                     Japan            51.0            5.920\n",
+      "37                 Lithuania            52.0            5.902\n",
+      "38                    Latvia            54.0            5.850\n",
+      "39                   Bolivia            58.0            5.823\n",
+      "40                      Peru            63.0            5.715\n",
+      "41                   Estonia            66.0            5.611\n",
+      "42                    Turkey            69.0            5.500\n",
+      "43                  Paraguay            70.0            5.493\n",
+      "44               Philippines            72.0            5.430\n",
+      "45                   Hungary            75.0            5.324\n",
+      "46                 Indonesia            81.0            5.262\n",
+      "47        Dominican Republic            86.0            5.230\n",
+      "48                    Greece            87.0            5.227\n",
+      "49                  Portugal            89.0            5.195\n",
+      "50                  Honduras            91.0            5.181\n",
+      "51  Taiwan Province of China            33.0            6.422\n"
+     ]
+    }
+   ],
    "source": [
     "allspotifycountries=[\"argentina\", \"australia\", \"austria\", \"belgium\", \"brazil\",\"bolivia\", \"canada\", \"chile\", \"colombia\", \"costarica\", \"czechrepublic\",\"denmark\", \"dominicanrepublic\", \"estonia\", \"elsalvador\", \"Global\",\"greece\", \"ecuador\", \"finland\", \"france\", \"germany\", \"guatemala\", \"honduras\", \"hongkong\", \"hungary\", \"iceland\", \"indonesia\", \"ireland\", \"italy\", \"japan\", \"latvia\", \"lithuania\", \"luxembourg\", \"malaysia\", \"mexico\", \"netherlands\", \"newzealand\", \"norway\", \"panama\", \"paraguay\", \"peru\", \"philippines\", \"poland\", \"portugal\", \"singapore\", \"slovakia\", \"spain\", \"sweden\", \"switzerland\", \"taiwan\", \"turkey\", \"unitedkingdom\", \"unitedstates\", \"uruguay\"]\n",
     "\n",
@@ -187,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,9 +322,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Unnamed: 0  Position  \\\n",
+      "0         3339805         1   \n",
+      "1         3339806         2   \n",
+      "2         3339807         3   \n",
+      "3         3339808         4   \n",
+      "4         3339809         5   \n",
+      "...           ...       ...   \n",
+      "27045     3366850        18   \n",
+      "27046     3366851        19   \n",
+      "27047     3366852        20   \n",
+      "27048     3366853        21   \n",
+      "27049     3366854        22   \n",
+      "\n",
+      "                                              Track Name             Artist  \\\n",
+      "0                                                Starboy         The Weeknd   \n",
+      "1                                        Let Me Love You           DJ Snake   \n",
+      "2                                                 Closer   The Chainsmokers   \n",
+      "3                Rockabye (feat. Sean Paul & Anne-Marie)       Clean Bandit   \n",
+      "4      I Don’t Wanna Live Forever (Fifty Shades Darke...               ZAYN   \n",
+      "...                                                  ...                ...   \n",
+      "27045                                      Man's Not Hot           Big Shaq   \n",
+      "27046                Perfect Duet (Ed Sheeran & Beyoncé)         Ed Sheeran   \n",
+      "27047                         What Lovers Do (feat. SZA)           Maroon 5   \n",
+      "27048                                             Filthy  Justin Timberlake   \n",
+      "27049                               Too Good At Goodbyes          Sam Smith   \n",
+      "\n",
+      "       Streams                                                URL        Date  \\\n",
+      "0         4209  https://open.spotify.com/track/5aAx2yezTd8zXrk...  2017-01-01   \n",
+      "1         2467  https://open.spotify.com/track/4pdPtRcBmOSQDlJ...  2017-01-01   \n",
+      "2         2450  https://open.spotify.com/track/7BKLCZ1jbUBVqRi...  2017-01-01   \n",
+      "3         2183  https://open.spotify.com/track/5knuzwU65gJK7IF...  2017-01-01   \n",
+      "4         2045  https://open.spotify.com/track/3NdDpSvN911VPGi...  2017-01-01   \n",
+      "...        ...                                                ...         ...   \n",
+      "27045     2503  https://open.spotify.com/track/2nUJvBO87SkxCVi...  2018-01-08   \n",
+      "27046     2483  https://open.spotify.com/track/1bhUWB0zJMIKr9y...  2018-01-08   \n",
+      "27047     2464  https://open.spotify.com/track/3hBBKuWJfxlIlnd...  2018-01-08   \n",
+      "27048     2431  https://open.spotify.com/track/1L3NV7VrCiuE8C5...  2018-01-08   \n",
+      "27049     2370  https://open.spotify.com/track/1mXVgsBdtIVeCLJ...  2018-01-08   \n",
+      "\n",
+      "      Region  \n",
+      "0         gr  \n",
+      "1         gr  \n",
+      "2         gr  \n",
+      "3         gr  \n",
+      "4         gr  \n",
+      "...      ...  \n",
+      "27045     gr  \n",
+      "27046     gr  \n",
+      "27047     gr  \n",
+      "27048     gr  \n",
+      "27049     gr  \n",
+      "\n",
+      "[6800 rows x 8 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# for country in countries_to_subset:\n",
     "# #     new_name = str(country)+ '1'\n",
