--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
    "metadata": {},
    "source": [
     "### Brief Explanation of Code Above\n",
-    "This is using our previous created function to get rid of all observations during 2018, and using our previous subsetted country dataframes of 50 observations per 200 days, and then saving this into a new dataframe with the country's name plus the nu"
+    "This is using our previous created function to get rid of all observations during 2018, and using our previous subsetted country dataframes of 50 observations per 200 days, and then saving this into a new dataframe with the country's name plus the number two."
    ]
   },
   {
