--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -874,6 +874,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#associates a number with the index\n",
+    "#find what index matches with the country. use index()\n",
+    "for index, country in enumerate(countries_to_subset)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -1226,28 +1237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def not18(dataframe):\n",
-    "    dataframe['Date'] = pd.to_datetime(dataframe['Date'])\n",
+    "    dataframe['Date'] = pd.to_datetime(dataframe['Date']).copy()\n",
     "    dataframe = dataframe[dataframe['Date'].dt.year != 2018]\n",
-    "    return dataframe"
+    "    return dataframe\n",
+    "#for each in country list, store the return in the dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "As you can see... our for-loop did not work because the 2018 dates are still there....\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1349,7 +1354,7 @@
        "18549  https://open.spotify.com/track/43ZyHQITOjhciSU...  2018-01-09     no  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,10 +1364,12 @@
     "# We wanted not18 to run as a procedure so that we could loop it through countries_to_subset. Unfortunately this did not work, \n",
     "# so we had to call not18() on every country .csv\n",
     "\n",
-    "for file in countries_to_subset: \n",
-    "    not18(file)\n",
-    "print(\"As you can see... our for-loop did not work because the 2018 dates are still there....\")\n",
-    "norway.tail()"
+    "for i in range(len(countries_to_subset)): \n",
+    "    countries_to_subset[i]=not18(countries_to_subset[i])\n",
+    "\n",
+    "countries_to_subset[0].tail()\n",
+    "norway.tail()\n",
+    "# Enumerate in a python list"
    ]
   },
   {
@@ -2260,9 +2267,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# combine into one big dataframe\n",
+    "# use groupby to access by country\n",
+    "\n",
+    "#reduce the number of calls to the API\n",
+    "#dictionary with keys for id, values with metrics. \n",
     "def getunique(dataframe):\n",
     "    \"\"\"Returns a dataframe that is a collection of the audio features information for every unique song in each country's dataframe\"\"\"\n",
     "    audiofeatures=pd.DataFrame({'danceability':[], 'energy':[],'key':[], 'loudness':[], 'mode':[], 'speechiness':[],'acousticness':[], 'instrumentalness':[],'liveness':[], 'valence':[], 'tempo':[], 'type':[],'id':[], 'uri':[],'track_href':[], 'analysis_url':[], 'duration_ms':[], 'time_signature':[]})\n",
+    "    #\"for ease of computation\"... explain how we differentiated songs among countries\n",
+    "    # whatever attributes stay the same (identify what attributes being the same would make the song the same)\n",
     "    uniquesongs=pd.unique(dataframe['track_name'])\n",
     "    list=[]   \n",
     "    for row in range(len(dataframe)):\n",
