Added cesar's dictionary

--- a/PROJ 2950.ipynb
+++ b/PROJ 2950.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "4    0.245483                      0.382612           2.430182  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4      Finland               5            7.469"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,6 +415,27 @@
     "unitedkingdom=pd.read_csv(\"unitedkingdom.csv\")\n",
     "unitedstates=pd.read_csv(\"unitedstates.csv\")\n",
     "uruguay=pd.read_csv(\"uruguay.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries_dic = {\"argentina\":argentina, \"australia\":australia, \"austria\": austria, \"belgium\": belgium,\n",
+    "                 \"bolivia\":bolivia, \"brazil\":brazil,\"canada\":canada, \"chile\": chile, \"colombia\":colombia,\n",
+    "                 \"costarica\":costarica, \"czechrepublic\":czechrepublic,\"denmark\":denmark, \n",
+    "                 \"dominicanrepublic\":dominicanrepublic,\"ecuador\":ecuador,\"elsalvador\":elsalvador,\n",
+    "                 \"estonia\":estonia, \"finland\":finland,\"france\":france,\"germany\":germany,\"Global\":Global,\n",
+    "                 \"greece\":greece,\"guatemala\":guatemala,\"honduras\":honduras,\"hongkong\":hongkong,\"hungary\":hungary,\n",
+    "                 \"iceland\":iceland,\"indonesia\":indonesia,\"ireland\":ireland,\"italy\":italy,\"japan\":japan,\n",
+    "                 \"latvia\":latvia,\"lithuania\":lithuania,\"luxembourg\":luxembourg,\"malaysia\":malaysia,\"mexico\":mexico,\n",
+    "                 \"netherlands\":netherlands, \"newzealand\":newzealand,\"norway\":norway,\"panama\":panama,\n",
+    "                 \"paraguay\":paraguay,\"peru\":peru,\"philippines\":philippines,\"poland\":poland,\"portugal\":portugal,\n",
+    "                 \"singapore\":singapore,\"slovakia\":slovakia,\"spain\":spain,\"sweden\":sweden,\"switzerland\":switzerland,\n",
+    "                 \"taiwanprovinceofchina\":taiwanprovinceofchina,\"turkey\":turkey,\"unitedkingdom\":unitedkingdom,\n",
+    "                 \"unitedstates\":unitedstates,\"uruguay\":uruguay}"
    ]
   },
   {
